# wav_file_player

./: CMakeLists.txt  README.md  alsa.c  main.c  main.h  plot.py  save_file.c  songs.c
DSP/: BMT_Tool.py  CMakeLists.txt
DSP/inc/: commons.h  dsp.h  env_follower.h
DSP/src/: dsp.c
